--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "fs-utils": "~0.3.6",
     "gray-matter": "~0.2.8",
-    "handlebars-helper-i18n": "^0.1.0",
+    "handlebars-helper-i18n": "git+https://git@github.com/toni-petrovic/handlebars-helper-i18n.git#master",
     "lodash": "~2.4.1"
   },
   "devDependencies": {
